@@ -21,14 +21,17 @@ approximations in a trust region at each step.
 
 See also
 --------
-AbdoRackwitz, SQP, TNC
+AbdoRackwitz, SQP, TNC, NLopt
 
 Examples
 --------
 >>> import openturns as ot
 >>> model = ot.NumericalMathFunction(['E', 'F', 'L', 'I'], ['d'], ['-F*L^3/(3*E*I)'])
 >>> problem = ot.OptimizationProblem(model, 5.0)
->>> algo = ot.Cobyla(problem)"
+>>> algo = ot.Cobyla(problem)
+>>> algo.setStartingPoint([0.0] * 4)
+>>> algo.run()
+>>> result = algo.getResult()"
 
 // ---------------------------------------------------------------------
 
