@@ -25,14 +25,17 @@ subject to a linearization of the constraints.
 
 See also
 --------
-AbdoRackwitz, Cobyla, TNC
+AbdoRackwitz, Cobyla, TNC, NLopt
 
 Examples
 --------
 >>> import openturns as ot
->>> model = ot.NumericalMathFunction(['E', 'F', 'L', 'I'], ['d'], ['-F*L^3/(3*E*I)'])
->>> problem = ot.OptimizationProblem(model, 5.0)
->>> algo = ot.SQP(problem)"
+>>> model = ot.NumericalMathFunction(['x1', 'x2', 'x3', 'x4'], ['y1'], ['x1*cos(x1)+2*x2*x3-3*x3+4*x3*x4'])
+>>> problem = ot.OptimizationProblem(model, -0.5)
+>>> algo = ot.SQP(problem)
+>>> algo.setStartingPoint([0.0] * 4)
+>>> algo.run()
+>>> result = algo.getResult()"
 
 // ---------------------------------------------------------------------
 
