@@ -35,7 +35,7 @@ Non-linear optimizer supporting bound constraints.
 
 See also
 --------
-AbdoRackwitz, SQP, Cobyla
+AbdoRackwitz, SQP, Cobyla, NLopt
 
 Examples
 --------
@@ -43,7 +43,10 @@ Examples
 >>> model = ot.NumericalMathFunction(['E', 'F', 'L', 'I'], ['d'], ['-F*L^3/(3*E*I)'])
 >>> bounds = ot.Interval([1.0]*4, [2.0]*4)
 >>> problem = ot.OptimizationProblem(model, ot.NumericalMathFunction(), ot.NumericalMathFunction(), bounds)
->>> algo = ot.TNC(problem)"
+>>> algo = ot.TNC(problem)
+>>> algo.setStartingPoint([0.0] * 4)
+>>> algo.run()
+>>> result = algo.getResult()"
 
 // ---------------------------------------------------------------------
 
